test/libsolidity/syntaxTests/storageLayoutSpecifier/repeated_layout_definition.sol
contract C layout at 0x1234 layout at 0xABC layout at 0x4321 layout at 0xCBA { }
// ----
// ParserError 8714: (28-34): More than one storage layout definition.
// ParserError 8714: (44-50): More than one storage layout definition.
// ParserError 8714: (61-67): More than one storage layout definition.
